Package_Tools/include-C/cglm/call/in_arbeit/fertig/mat2.h

/*
 * Copyright (c), Recep Aslantas.
 *
 * MIT License (MIT), http://opensource.org/licenses/MIT
 * Full license can be found in the LICENSE file
 */

#ifndef cglmc_mat2_h
#define cglmc_mat2_h
#ifdef __cplusplus
extern "C" {
#endif

#include "../cglm.h"

extern
void
glmc_mat2_copy(mat2 mat, mat2 dest);

extern
void
glmc_mat2_identity(mat2 mat);

extern
void
glmc_mat2_identity_array(mat2 *  mat, size_t count);

extern
void
glmc_mat2_zero(mat2 mat);

extern
void
glmc_mat2_mul(mat2 m1, mat2 m2, mat2 dest);

extern
void
glmc_mat2_transpose_to(mat2 m, mat2 dest);

extern
void
glmc_mat2_transpose(mat2 m);

extern
void
glmc_mat2_mulv(mat2 m, vec2 v, vec2 dest);

extern
float
glmc_mat2_trace(mat2 m);

extern
void
glmc_mat2_scale(mat2 m, float s);

extern
float
glmc_mat2_det(mat2 mat);

extern
void
glmc_mat2_inv(mat2 mat, mat2 dest);

extern
void
glmc_mat2_swap_col(mat2 mat, int col1, int col2);

extern
void
glmc_mat2_swap_row(mat2 mat, int row1, int row2);

extern
float
glmc_mat2_rmc(vec2 r, mat2 m, vec2 c);

extern
void
glmc_mat2_make(float *  src, mat2 dest);

#ifdef __cplusplus
}
#endif
#endif /* cglmc_mat2_h */